# SimpleDualTest

./: CMakeLists.txt  README.md
SimpleDualAndroid/: .cproject  .project  AndroidManifest.xml
SimpleDualAndroid/jni/: Application.mk
SimpleDualAndroid/res/values/: strings.xml
SimpleDualApp/: Android.mk  CMakeLists.txt
SimpleDualApp/src/: SimpleAndroidTest.cpp
SimpleDualDesktop/: CMakeLists.txt
native_app/: Android.mk  CMakeLists.txt
native_app/android/: AndroidApplication.cpp  AndroidApplication.h
native_app/src/: Application.h  Device.h
native_app/win32/: FrameTimer.cpp  FrameTimer.h  RenderThread.cpp  RenderThread.h  ScanCodes.h  WindowsApplication.cpp  WindowsApplication.h
native_env/: Android.mk  CMakeLists.txt
native_env/src/: DeviceProxy.cpp  DeviceProxy.h  GLES2Util.cpp  GLES2Util.h  System.cpp  System.h  SystemFile.cpp  SystemFile.h
native_env_core/: Android.mk  CMakeLists.txt
native_env_core/src/: AlignedStlAllocator.h  BTrie.h  Base.h  ConcurrentWorkQueue.cpp  ConcurrentWorkQueue.h  MemAlloc.h  SystemCore.cpp  SystemCore.h  TripleBuffer.h  WorkQueue.h
